[package]
name = "cargout"
version = "0.1.0"
authors = ["Oussama Elgoumri <euvoor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
clap = "3.0.0-beta.2"
console = "0.12.0"
