[package]
name = "cargout"
version = "0.1.0"
authors = ["Oussama Elgoumri <euvoor@gmail.com>"]
edition = "2018"
description = "List outdated crates"

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
tracing = "0.1.19"
tracing-subscriber = "0.2.12"
clap = "3.0.0-beta.2"
console = "0.12.0"
toml = "0.5.6"
regex = "1.3.9"
reqwest = { version = "0.10.8", features = ["trust-dns"] }
futures = "0.3.5"
serde_json = "1.0.57"

[lib]
name = "cargout"
path = "src/lib.rs"

[[bin]]
name = "cargout"
path = "src/main.rs"
